Ticket #4846: Fixing a couple bugs

--- a/test/data/oembed.html
+++ b/test/data/oembed.html
@@ -70,6 +70,11 @@
           <ul id="oembed__notes-list">
               <li class="oembed__note">
                 <span class="oembed__collapsed-text oembed__collapsable-text">
+                  <i class="fa fa-quote-left"></i> A second comment <i class="fa fa-quote-right"></i>
+                </span> 
+              </li>
+              <li class="oembed__note">
+                <span class="oembed__collapsed-text oembed__collapsable-text">
                   <i class="fa fa-quote-left"></i> A comment <i class="fa fa-quote-right"></i>
                 </span> 
               </li>
