--- a/test/data/oembed.html
+++ b/test/data/oembed.html
@@ -5,7 +5,7 @@
         <h1 id="oembed__title">Test</h1>
         <span id="oembed__status" class="l">status_undetermined</span>
       </div>
-      <p id="oembed__disclaimer"><span class="l">disclaimer</span></p>
+      <p id="oembed__disclaimer"><span class="l">disclaimer_undetermined</span></p>
 
       <div id="oembed__picture">
       </div>
@@ -32,7 +32,9 @@
 
             <span id="oembed__footer-stats">
               <span class="l">notes_count</span> • 
+
               <span class="l">completed_tasks_count</span> • 
+
               <span><a href="http://localhost:3333/test-team/url" target="_blank">http://localhost:3333/test-team/url</a></span>
             </span>
             <br />
