Ticket #6482: Fixing test

--- a/test/data/oembed.html
+++ b/test/data/oembed.html
@@ -1,9 +1,8 @@
 <body>
-    <div id="oembed__container" class="oembed__status-undetermined">
-
+    <div id="oembed__container" class="oembed__status-undetermined" style="background-color: #518FFF;">
       <div id="oembed__top">
         <h1 id="oembed__title">Test</h1>
-        <span id="oembed__status" class="l">status_undetermined</span>
+        <span id="oembed__status" class="l">status_undetermined</span> 
       </div>
       <p id="oembed__disclaimer"><span class="l">disclaimer_undetermined</span></p>
 
