Copy fixes for archives #6646

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Check Admin Page</title>
+    <title>Check Administration</title>
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/css/home.css" />
   </head>
   <body>
     <div class="login-menu__content">
-      <h2 class="login-menu__heading">Check Admin Page</h2>
+      <h2 class="login-menu__heading">Check Administration</h2>
       <ul class="login-menu__options">
         <li>
           <a class="login-menu__button login-menu__button--slack" id="slack-login" href="/api/users/auth/slack?destination=/admin">Sign in with Slack</a>
