Ticket #7442: Improvements on embed, like, RTL handling, long-strings handling and best proportion between image and text on mobile

--- a/test/data/oembed-translation_status.html
+++ b/test/data/oembed-translation_status.html
@@ -107,7 +107,7 @@
     <div id="oembed__content-container">
       <div id="oembed__top" class="oembed__card">
         <p id="oembed__last-status" class="oembed__status-pending"><span id="oembed__status" class="l">status_pending</span></p> 
-        <div id="oembed__content">
+        <div id="oembed__content" dir="auto">
           <div id="oembed__content-content">
               <div id="oembed__content-col-2" class="oembed__linkify">
                 <p>Test</p>
