--- a/test/data/oembed-verification_status.html
+++ b/test/data/oembed-verification_status.html
@@ -107,7 +107,7 @@
     <div id="oembed__content-container">
       <div id="oembed__top" class="oembed__card">
         <p id="oembed__last-status" class="oembed__status-undetermined"><span id="oembed__status" class="l">status_undetermined</span></p> 
-        <div id="oembed__content">
+        <div id="oembed__content" dir="auto">
           <div id="oembed__content-content">
               <div id="oembed__content-col-2" class="oembed__linkify">
                 <p>Test</p>
