--- a/test/data/oembed-translation_status.html
+++ b/test/data/oembed-translation_status.html
@@ -107,9 +107,9 @@
     <div id="oembed__content-container">
       <div id="oembed__top" class="oembed__card">
         <p id="oembed__last-status" class="oembed__status-pending"><span id="oembed__status" class="l">status_pending</span></p> 
-        <div id="oembed__content" dir="auto">
+        <div id="oembed__content">
           <div id="oembed__content-content">
-              <div id="oembed__content-col-2" class="oembed__linkify">
+              <div id="oembed__content-col-2" class="oembed__linkify" dir="auto">
                 <p>Test</p>
               </div>
           </div>
@@ -119,8 +119,8 @@
 
 
       <div id="oembed__footer">
-        <p><img src="http://localhost:3000/uploads/team/15/rails.png" alt="" /> <span id="oembed__team-name">Test Team</span></p>
-        <p class="oembed__linkify" id="oembed__team-disclaimer"></p>
+        <p><img src="http://localhost:3000/uploads/team/15/rails.png" alt="" /> <span id="oembed__team-name" dir="auto">Test Team</span></p>
+        <p class="oembed__linkify" id="oembed__team-disclaimer" dir="auto"></p>
         <p class="oembed__linkify" id="oembed__team-link">http://localhost:3333/test-team</p>
       </div>
     </div> <!-- / #oembed__content-container -->
