Tickets #7462, #7460, #7459 and #7454: Fixes

--- a/test/data/oembed-translation_status.html
+++ b/test/data/oembed-translation_status.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Language" id="oembed__meta-content-language" content="">
     <title>Test</title>
-    <link href="http://localhost:3000/css/oembed.css" rel="stylesheet" type="text/css">
+    <link href="http://localhost:3000/css/oembed.css?t=201904021148" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="http://api.test:13000/javascripts/timeago/jquery.timeago.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-linkify/2.1.8/linkify.min.js"></script>
@@ -125,7 +125,7 @@
       </div>
     </div> <!-- / #oembed__content-container -->
 
-    <script src="http://localhost:3000/javascripts/oembed.js"></script>
+    <script src="http://localhost:3000/javascripts/oembed.js?t=201904021148"></script>
 
   </body>
 </html>
