Ticket #7571 - add otp to Admin UI login

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,11 @@
                   class="login-email__password-input" value="" name="api_user[password]" type="password">
                   <label class="login-email__password-label">Password (minimum 8 characters)</label>
                 </div>
+                <div class="login-email__otp_attempt">
+                  <input placeholder="Two-Factor Authentication Token"
+                  class="login-email__password-input" value="" name="api_user[otp_attempt]" type="otp_attempt">
+                  <label class="login-email__password-label">Two-Factor Authentication Token</label>
+                </div>
                 <div class="login-email__actions">
                   <button class="login-email__submit login-email__submit--login" id="submit-login" type="submit">Sign in »</button>
                 </div>
